--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <title>About Jacqueline Koller</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top d-flex">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Jacqueline Koller</a>
+        <a class="navbar-brand" href="/" title="home">Jacqueline Koller</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,28 +41,34 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="about-me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="contact"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Jacqueline Koller</h1>
+    <h1 class="text-center">Jacqueline</h1>
     <h3 class="text-center">Front-end developer, based in Germany</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html#contact" class="primary-link" title="contact"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="about-me">About me</a>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+        <div class="col-6 d-none d-md-block">
+          <img src="images/yoga.png" class="img-fluid rounded" alt="yoga" />
         </div>
-        <div class="col-6">
+        <div class="col-6 text-center">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -76,7 +82,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-6 text-center">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -88,15 +94,19 @@
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+        <div class="col-6 d-none d-md-block">
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="weather"
+          />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+        <div class="col-6 d-none d-md-block">
+          <img src="images/yogurt.png" class="img-fluid rounded" alt="yogurt" />
         </div>
-        <div class="col-6">
+        <div class="col-6 text-center">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -105,7 +115,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
